--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -24,7 +24,7 @@
         <div id="perfilImg">
             <section id="perfilInfomações1">
                 <h1> I am <strong>Jeferson</strong></h1>
-                <h2>web designer</h2>
+                <h2>web designer ┃ Dev Front-end </h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, expedita adipisci ipsa totam distinctio rerum laborum autem ab iste labore voluptatum deserunt. Ut, dolor sapiente impedit sint alias reiciendis repellendus? lor</p>
                     <nav id="redesSocial">
                         <a href="#"><img width="20" src="icons/icone-facebook.png" alt="icone-facebook"></a>
