--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -13,10 +13,10 @@
         <section id="navegação">
             <h1>Portfólio.oficial</h1>
             <nav>            
-                    <a href="#">Sobre mim</a>
-                    <a href="#">Projetos</a>
-                    <a href="#">Habilidades</a>
-                    <a href="#">Contato</a>              
+                    <a href="#">┃Sobre mim┃</a>
+                    <a href="#">┃Projetos┃</a>
+                    <a href="#">┃Habilidades┃</a>
+                    <a href="#">┃Contato┃</a>              
             </nav>
         </section>
     </header>
