--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -34,6 +34,10 @@
                     </nav>
             </section>
         </div>
+        <section id="trabalhosPortfólio">
+            <h1>My Works</h1>
+            <p>__________________</p>
+        </section>
     </main>
     <footer>
         
