--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -39,7 +39,7 @@
             <p>__________________</p>
         </section>
         <section id="projetoPortfólio01">
-            <a href="">
+            <a href="#">
                 <h1>Projeto de tela de login</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda sed at quidem debitis doloremque aliquid .</p>
             </a>
