--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -40,8 +40,7 @@
         </section>
         <section id="projetoPortfólio01">
             <a target="_blank" href="https://softjeferson.github.io/Portfolio_profissional/projeto_login/index">
-                <h1>Projeto de tela de login</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda sed at quidem debitis doloremque aliquid .</p>
+                <h1>Projeto de tela de login <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda sed at quidem debitis doloremque aliquid .</p></h1>
             </a>
         </section>
     </main>
