--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -12,6 +12,7 @@
     <header>
         <section id="navegação">
             <h1>Portfólio.oficial</h1>
+            <h2> softjeferson ┃ Front-end </h2>
             <nav>            
                     <a href="#">┃Sobre mim┃</a>
                     <a href="#">┃Projetos┃</a>
@@ -27,10 +28,10 @@
                 <h2>web designer ┃ Dev Front-end </h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, expedita adipisci ipsa totam distinctio rerum laborum autem ab iste labore voluptatum deserunt. Ut, dolor sapiente impedit sint alias reiciendis repellendus? lor Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ea harum dolor consequuntur quis dignissimos autem. Iure eos deserunt culpa sed qui odio odit! Possimus sint corrupti assumenda quidem tempore!Lorem</p>
                     <nav id="redesSocial">
-                        <a href="#"><img width="35" src="icons/icone-facebook.png" alt="icone-facebook"></a>
-                        <a href="#"><img width="45" src="icons/icone-instagram.png" alt="icone-instagram"></a>
-                        <a href="#"><img width="35" src="icons/icone-linkedin.png" alt="icone-linkedin"></a>
-                        <a href="#"><img width="35" src="icons/icone-twitter.png" alt="icone-twitter"></a>
+                        <a href="https://www.facebook.com/Jeferson.alexandre.9066"><img width="35" src="icons/icone-facebook.png" alt="icone-facebook"></a>
+                        <a href="https://instagram.com/jeferson7973?igshid=ZDdkNTZiNTM="><img width="45" src="icons/icone-instagram.png" alt="icone-instagram"></a>
+                        <a href="https://www.linkedin.com/in/jeferson-alexandre-a5153b26b"><img width="35" src="icons/icone-linkedin.png" alt="icone-linkedin"></a>
+                        <a href="https://twitter.com/jeferson7879?t=mA4Vjuqp5m0MOTgvuV62ZA&s=08"><img width="35" src="icons/icone-twitter.png" alt="icone-twitter"></a>
                     </nav>
             </section>
         </div>
