--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -14,10 +14,13 @@
             <h1>Portfólio.oficial</h1>
             <h2> softjeferson ┃ Front-end </h2>
             <nav>            
-                    <a href="#">┃Sobre mim┃</a>
-                    <a href="#">┃Projetos┃</a>
-                    <a href="#">┃Habilidades┃</a>
-                    <a href="#">┃Contato┃</a>              
+                    <a href="#">Sobre mim </a>
+                    <p>┃</p>
+                    <a href="#">Projetos </a>
+                    <p>┃</p>
+                    <a href="#">Habilidade </a>
+                    <p>┃</p>
+                    <a href="#">Contato </a>              
             </nav>
         </section>
     </header>
