--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -42,11 +42,18 @@
             <h1>My Works</h1>
             <p>__________________</p>
         </section>
-        <section id="projetoPortfólio01">
-            <a target="_blank" href="https://softjeferson.github.io/Portfolio_profissional/projeto_login/index">
-                <h1>Projeto de tela de login <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda sed at quidem debitis doloremque aliquid .</p></h1>
-            </a>
-        </section>
+        <div id="works">
+            <section id="projetoPortfólio01">
+                <a target="_blank" href="https://softjeferson.github.io/Portfolio_profissional/projeto_login/index">
+                    <h1>Projeto de tela de login <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda sed at quidem debitis doloremque aliquid .</p></h1>
+                </a>
+            </section>
+            <section id="projetoPortfólio02">
+                <a target="_blank" href="https://softjeferson.github.io/Portfolio_profissional/cafeteria_1v/index">
+                    <h1>cafeteriav1 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam amet vitae odit possimus expedita voluptatem, autem quam exercitationem reiciendis cupiditate obcaecati eligendi nemo tenetur ea inventore, sapiente suscipit, vel dicta?</p></h1>
+                </a>
+            </section>
+        </div>
     </main>
     <footer>
         
