--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -49,7 +49,7 @@
                 </a>
             </section>
             <section id="projetoPortfólio02">
-                <a target="_blank" href="https://softjeferson.github.io/Portfolio_profissional/cafeteria_1v/index">
+                <a target="_blank" href="https://softjeferson.github.io/Portfolio_profissional/cafeteria_1v/index.html">
                     <h1>cafeteriav1 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam amet vitae odit possimus expedita voluptatem, autem quam exercitationem reiciendis cupiditate obcaecati eligendi nemo tenetur ea inventore, sapiente suscipit, vel dicta?</p></h1>
                 </a>
             </section>
