--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -4,59 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/media-query-principal.css">
-    <title>Portfólio.oficial</title>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <section id="navegação">
-            <h1>Portfólio.oficial</h1>
-            <h2> softjeferson ┃ Front-end </h2>
-            <nav>            
-                    <a href="#">Sobre mim </a>
-                    <p>┃</p>
-                    <a href="#">Projetos </a>
-                    <p>┃</p>
-                    <a href="#">Habilidade </a>
-                    <p>┃</p>
-                    <a href="#">Contato </a>              
-            </nav>
-        </section>
-    </header>
-    <main>
-        <div id="perfilImg">
-            <section id="perfilInfomações1">
-                <h1> I am <strong>Jeferson</strong></h1>
-                <h2>web designer ┃ Dev Front-end </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, expedita adipisci ipsa totam distinctio rerum laborum autem ab iste labore voluptatum deserunt. Ut, dolor sapiente impedit sint alias reiciendis repellendus? lor Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ea harum dolor consequuntur quis dignissimos autem. Iure eos deserunt culpa sed qui odio odit! Possimus sint corrupti assumenda quidem tempore!Lorem</p>
-                    <nav id="redesSocial">
-                        <a target="_blank" href="https://www.facebook.com/Jeferson.alexandre.9066"><img width="35" src="icons/icone-facebook.png" alt="icone-facebook"></a>
-                        <a target="_blank" href="https://instagram.com/jeferson7973?igshid=ZDdkNTZiNTM="><img width="45" src="icons/icone-instagram.png" alt="icone-instagram"></a>
-                        <a target="_blank" href="https://www.linkedin.com/in/jeferson-alexandre-a5153b26b"><img width="35" src="icons/icone-linkedin.png" alt="icone-linkedin"></a>
-                        <a target="_blank" href="https://twitter.com/jeferson7879?t=mA4Vjuqp5m0MOTgvuV62ZA&s=08"><img width="35" src="icons/icone-twitter.png" alt="icone-twitter"></a>
-                    </nav>
-            </section>
-        </div>
-        <section id="trabalhosPortfólio">
-            <h1>My Works</h1>
-            <p>__________________</p>
-        </section>
-        <div id="works">
-            <section id="projetoPortfólio01">
-                <a target="_blank" href="https://softjeferson.github.io/Portfolio_profissional/projeto_login/index">
-                    <h1>Projeto de tela de login <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda sed at quidem debitis doloremque aliquid .</p></h1>
-                </a>
-            </section>
-            <section id="projetoPortfólio02">
-                <a target="_blank" href="https://softjeferson.github.io/Portfolio_profissional/projeto_login/login-cafeteria/index">
-                    <h1>cafeteriav1 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam amet vitae odit possimus expedita voluptatem, autem quam exercitationem reiciendis cupiditate obcaecati eligendi nemo tenetur ea inventore, sapiente suscipit, vel dicta?</p></h1>
-                </a>
-            </section>
-        </div>
-    </main>
-    <footer>
-        
-    </footer>
+    
 </body>
 </html>
