--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query-principal.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>SorftJeferson</h1>
+        <div id="menu" class="material-icons" onclick="clicar()">menu</div>
+        <div id="navegação">
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Portfólio</a>
+                <a href="#">contact</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section id="perfil">
+            <h1>welcome!</h1>
+            <h2> I am web <strong id="Scor1">Densenvolvedor</strong> || Front-End || <strong id="Scor2">Densenvolvedor soft</strong>||</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, iure! Facere ea consequatur dolorum? Fugiat sed quod itaque molestiae, dolor ipsam repellendus quisquam corporis <div class=""></div> </p>
+            <nav>
+                
+            </nav>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="estilos/comandos.js"></script>
 </body>
 </html>
