--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -25,8 +25,8 @@
     <main>
         <section id="perfil">
             <h1>welcome!</h1>
-            <h2> I am web <strong id="Scor1">Densenvolvedor</strong> || Front-End || <strong id="Scor2">Densenvolvedor soft</strong>||</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, iure! Facere ea consequatur dolorum? Fugiat sed quod itaque molestiae, dolor ipsam repellendus quisquam corporis <div class=""></div> </p>
+            <h2> I am web || <strong id="Scor1">Densenvolvedor</strong> || Front-End || <strong id="Scor2">Densenvolvedor soft</strong>||</h2>
+            <p> Eu sou um Densenvolvedor Front-End estudante disposto a novas Experiência no desenvolvimento de sites e aplicativos web. Trabalho com tecnologias modernas, como HTML5,CSS3,JAVASCRIPT,para criar interfaces de usuários atraentes e responsivas. sempre busco estar atualizado com as últimas tendências e tecnologias,a fim de oferecer aos meus clientes soluções inovadoras e eficazes.</p>
             <nav>
                 
             </nav>
