--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -26,10 +26,17 @@
         <section id="perfil">
             <h1>welcome!</h1>
             <h2> I am web || <strong id="Scor1">Densenvolvedor</strong> || Front-End || <strong id="Scor2">Densenvolvedor soft</strong>||</h2>
-            <p> Eu sou um Densenvolvedor Front-End estudante disposto a novas Experiência no desenvolvimento de sites e aplicativos web. Trabalho com tecnologias modernas, como HTML5,CSS3,JAVASCRIPT,para criar interfaces de usuários atraentes e responsivas. sempre busco estar atualizado com as últimas tendências e tecnologias,a fim de oferecer aos meus clientes soluções inovadoras e eficazes.</p>
-            <nav>
-                
-            </nav>
+            <p> Eu sou um Densenvolvedor Front-End em estudo , disposto a novas Experiência no desenvolvimento de sites e aplicativos web. Trabalho com tecnologias modernas, como HTML5,CSS3,JAVASCRIPT,para criar interfaces de usuários atraentes e responsivas. sempre busco estar atualizado com as últimas tendências e tecnologias,a fim de oferecer aos meus clientes soluções inovadoras e eficazes.</p>
+            <div id="img01"></div>
+        </section>
+        <section id="perfil02">
+            <h1> My <strong id="Scor1">Nome</strong> Is <strong id="Scor2">Jeferson</strong></h1>
+            <ul>
+                <p>Nome: Jeferson Alexandre nazario da silva</p>
+                <p>Ago: 19</p>
+                <p>Address: PE-escada</p>
+                <p>Email: jefersonalexandre244@gmail.com</p>
+            </ul>
         </section>
     </main>
     <footer>
