--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -37,6 +37,22 @@
                 <p>Address: PE-escada</p>
                 <p>Email: jefersonalexandre244@gmail.com</p>
             </ul>
+        </section >
+        <div id="tecnologias">
+            <h1>My <strong>tecnologias</strong></h1>
+            <p>__________</p>
+        </div>
+        
+        <section id="mytecnologias">
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+                
+            </div>
         </section>
     </main>
     <footer>
