--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -44,14 +44,14 @@
         </div>
         
         <section id="mytecnologias">
-            <div>
-
+            <div class="conteiner">
+                <img width="80" src="fotos/html5-logo.png" alt="html5-logo">
             </div>
-            <div>
-
+            <div class="conteiner">
+                <img width="60" src="fotos/CSS3_logo.png" alt="CSS3_logo">
             </div>
-            <div>
-                
+            <div class="conteiner">
+                <img width="69" src="fotos/JavaScript_logo.png" alt="JavaScript_logo">
             </div>
         </section>
     </main>
