--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body onload="mudouTamanho()">
     <header>
-        <h1>SorftJeferson</h1>
+        <h1> Sorft<strong>Jeferson</strong> </h1>
         <div id="menu" class="material-icons" onclick="clicar()">menu</div>
-        <div id="navegação">
+        <div id="navegação" >
             <nav>
                 <a href="#">Home</a>
                 <a href="#">About</a>
