correção bug (resolvido)

--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
 </head>
-<body onload="mudouTamanho()" onresize="handleMediaCharge()">
+<body onresize="mudouTamanho()" >
     <header>
         <h1> Sorft<strong>Jeferson</strong> </h1>
         <div id="menu" class="material-icons" onclick="clicar()">menu</div>
