--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -26,12 +26,13 @@
         <section id="perfil">
             <h1>welcome!</h1>
             <h2> I am web || <strong id="Scor1">Densenvolvedor</strong> || Front-End || <strong id="Scor2">Densenvolvedor soft</strong>||</h2>
-            <p> Eu sou um Densenvolvedor Front-End em estudo , disposto a novas Experiência no desenvolvimento de sites e aplicativos web. Trabalho com tecnologias modernas, como HTML5,CSS3,JAVASCRIPT,para criar interfaces de usuários atraentes e responsivas. sempre busco estar atualizado com as últimas tendências e tecnologias,a fim de oferecer aos meus clientes soluções inovadoras e eficazes.</p>
+            <p> Ao longo do caminho, estou desenvolvendo minhas habilidades de resolução de problemas, pensamento lógico e criatividade para criar projetos inovadores e funcionais, a fim de oferecer aos meus clientes solução inovadoras e eficazes.</p>
             <div id="img01"></div>
         </section>
         <section id="perfil02">
             <h1> My <strong id="Scor1">Nome</strong> Is <strong id="Scor2">Jeferson</strong></h1>
             <ul>
+                <p><p id="textJS">...</p>
                 <p>Nome: Jeferson Alexandre nazario da silva</p>
                 <p>Ago: 19</p>
                 <p>Address: PE-escada</p>
@@ -44,13 +45,13 @@
         </div>
         
         <section id="mytecnologias">
-            <div class="conteiner">
+            <div id="foto01" class="conteiner">
                 <img width="80" src="fotos/html5-logo.png" alt="html5-logo">
             </div>
-            <div class="conteiner">
+            <div id="foto02" class="conteiner">
                 <img width="60" src="fotos/CSS3_logo.png" alt="CSS3_logo">
             </div>
-            <div class="conteiner">
+            <div id="foto03" class="conteiner">
                 <img width="69" src="fotos/JavaScript_logo.png" alt="JavaScript_logo">
             </div>
         </section>
