--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -5,19 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>projetos de header</title>
+    <title>ERUDION</title>
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="faficon.io/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <div class="conteiner">
-            <div class="logo"><img width="200px" src="logo/DOUBTNUT.png"></div>
+        <div class="container">
+            <div class="logo"><img width="250" src="logo/DOUBTNUT.png"></div>
                 <div class="menu">
                     <nav>
-                        <a href="#">home</a>
-                        <a href="#">blog</a>
-                        <a href="#">sobre</a>
-                        <a href="#">contato</a>
+                        <a target="_blank" href="#">Home</a>
+                        <a target="_blank" href="#">About</a>
+                        <a target="_blank" href="#">Courses</a>
+                        <a target="_blank" href="#">Pages</a>
+                        <a target="_blank" href="#">Blog</a>
+                        <a target="_blank" href="#">Contact</a>
                     </nav>
                 </div>
 
@@ -27,22 +30,31 @@
                     <span class="linha"></span>
                 </button>
 
-                <div class="menu-mobile" id="menu-mobile">
+                <div id="menu-mobile" class="menu-mobile">
                     <nav>
-                        <a href="#">home</a>
-                        <a href="#">blog</a>
-                        <a href="#">sobre</a>
-                        <a href="#">contato</a>
+                        <a target="_blank" href="#">Home</a>
+                        <a target="_blank" href="#">About</a>
+                        <a target="_blank" href="#">Courses</a>
+                        <a target="_blank" href="#">Pages</a>
+                        <a target="_blank" href="#">Blog</a>
+                        <a target="_blank" href="#">Contact</a>
                     </nav>
                 </div>
 
-            <div class="sociais">
-                <button><i class="fa-brands fa-instagram"></i></button>
-                <button><i class="fa-brands fa-linkedin-in"></i></button>
-                <button><i class="fa-brands fa-twitter"></i></button>
-            </div>
+                <div class="sociais">
+                    <button><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></button>
+                    <button><a href="#" target="_blank"><i class="fa-brands fa-github"></i></a></button>
+                    <button><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></button>
+                </div>
         </div>
     </header>
-    <script src="animação.js"></script>
+    <main>
+        <div class="container-main">
+            <section class="container-conteudo">
+               
+            </section>
+        </div>
+    </main>
+    <script src="sistema-interatividade.js"></script>
 </body>
 </html>
